allow smaller screen sizes to avoid overflow

--- a/master.css
+++ b/master.css
@@ -103,7 +103,7 @@ noscript {
 section {
   padding: 0 25px 1.5em;
   max-width: min(75%,1000px);
-  min-width: 400px;
+  min-width: min(400px,100%);
   margin: auto;
   opacity: 0;
   transition: 1s;
